--- a/assessments.html
+++ b/assessments.html
@@ -14,10 +14,11 @@
     color: #333;
   }
   h2 {
-    color: #1a73e8;
-    font-weight: 600;
-    margin-bottom: 20px;
-  }
+  color: #1a73e8;
+  font-weight: 600;
+  margin-bottom: 20px;
+  text-align: center;
+}
   .container {
     max-width: 1200px;
     margin: auto;
@@ -180,7 +181,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>Assessment Entry</h2>
+  <h2>Smart Elimu Connect CBE Assessment & Reporting System</h2>
 
   <div class="top-row">
 
